fix z-index for slide

--- a/src/sundayComponents/sunday-service.sass
+++ b/src/sundayComponents/sunday-service.sass
@@ -390,7 +390,7 @@ body
                 .slide-title
                     font-size: 2rem
                     font-weight: bold
-                    z-index: 50
+                    z-index: 70
                     @media (min-width: 600px)
                         margin-bottom: 20px
                     @media (max-height: 600px)
@@ -400,7 +400,7 @@ body
                     line-height: 2
                     font-size: 1.35rem
                     white-space: before
-                    z-index: 50
+                    z-index: 70
                     @media (max-height: 600px)
                         font-size: 1rem
 
